--- a/SunRain/ManagementSystem/InformationTransferLibrary/About.xaml
+++ b/SunRain/ManagementSystem/InformationTransferLibrary/About.xaml
@@ -1,10 +1,11 @@
 ﻿<Window x:Class="InformationTransferLibrary.About"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="About..." Height="150" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
+        Title="About..." Height="180" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
         Icon="/InformationTransferLibrary;component/Resources/bottom_logo.gif">
     <Grid Margin="3">
         <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
@@ -17,9 +18,11 @@
         <Label Grid.Row="0" Grid.Column="1" Content="{Binding Path=Label1Content,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                FontWeight="Bold"
                HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <Label Grid.Row="1" Grid.Column="1" Content="{Binding Path=Label2Content,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+        <Label Grid.Row="1" Grid.Column="1" Content="{Binding Path=Label2Version,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <Button Grid.Row="4" Grid.Column="1" Content="OK" Width="80" Height="28"
+        <Label Grid.Row="2" Grid.Column="1" Content="{Binding Path=Label2Content,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+               HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
+        <Button Grid.Row="3" Grid.Column="1" Content="OK" Width="80" Height="28"
                 HorizontalAlignment="Right" VerticalAlignment="Center" Click="OK_Button_Click"/>  
     </Grid>
 </Window>
