--- a/SunRain/ManagementSystem/ServiceConfiguration/ViewUserMsgLog.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ViewUserMsgLog.xaml
@@ -49,7 +49,7 @@
                   CanUserAddRows="False" CanUserDeleteRows="True" Grid.Column="1"
                   HorizontalGridLinesBrush="LightGray" VerticalGridLinesBrush="LightGray" 
                   VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" 
-                  SelectionMode="Single" HeadersVisibility="Column" CanUserSortColumns="False"
+                  SelectionMode="Single" HeadersVisibility="Column" CanUserSortColumns="True"
                       MouseDoubleClick="Message_DataGrid_MouseDoubleClick">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="DTU标识" Width="100" MinWidth="50"
