--- a/GTSW/Bumblebee/Bumblebee/SetCmd/RecorderDateTime.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/RecorderDateTime.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="记录仪时间" Height="150" Width="320" Loaded="Window_Loaded"
+        Title="记录仪时间" Height="150" Width="450" Loaded="Window_Loaded"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
@@ -14,15 +14,15 @@
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Label Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" 
                Content="系统模式 :" Foreground="{Binding Path=DateTimeForeground,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
         <Label Grid.Row="2" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"
                Content="自定义模式 :" Foreground="{Binding Path=DateTimeForeground,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="4" Grid.Column="1" Margin="30,3,-30,1" Width="75" Content="确认"
+        <Button Grid.Row="4" Grid.Column="1" Margin="150,3,-30,1" Width="75" Content="确认"
                 IsEnabled="{Binding Path=OKEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 IsDefault="{Binding Path=OKDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="OK_Button_Click"/>
@@ -30,14 +30,14 @@
                 IsDefault="{Binding Path=CancelDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="Cancel_Button_Click"/>
         <RadioButton Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" IsThreeState="False"
-                     Content="{Binding Path=SystemModeDateTime,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                     Content="{Binding Path=SystemModeDateTimeString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                      HorizontalAlignment="Left" VerticalAlignment="Center" Name="rbtnSystemMode"
                      IsChecked="{Binding Path=SystemModeDateTimeChecked,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         <RadioButton Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" IsThreeState="False"
                      HorizontalAlignment="Stretch" VerticalAlignment="Center" Name="rbtnUserMode"
                      IsChecked="{Binding Path=UserModeDateTimeChecked,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
             <RadioButton.Content>
-                <xctk:DateTimePicker HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="180"
+                <xctk:DateTimePicker HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="300"
                                      Value="{Binding Path=UserModeDateTime,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
             </RadioButton.Content>
         </RadioButton>
