--- a/GTSW/Bumblebee/Bumblebee/Login.xaml
+++ b/GTSW/Bumblebee/Bumblebee/Login.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="系统登录" Height="150" Width="270" WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize" Loaded="Window_Loaded">
+        ResizeMode="NoResize" Loaded="Window_Loaded" Icon="/Bumblebee;component/Resources/login.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
