--- a/GTSW/Bumblebee/Bumblebee/SerialPortConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SerialPortConfiguration.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="设置串口参数" Height="270" Width="200" WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize" Loaded="Window_Loaded">
+        ResizeMode="NoResize" Loaded="Window_Loaded" Icon="/Bumblebee;component/Resources/serialportconfig.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
