--- a/GTSW/Bumblebee/Bumblebee/ServerConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/ServerConfiguration.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Bumblebee.ServerConfiguration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="设置管理平台参数" Height="150" Width="300" WindowStartupLocation="CenterScreen" Icon="/Bumblebee;component/Resources/serverconfig.ico">
     <Grid>
         <Grid.RowDefinitions>
@@ -18,9 +19,12 @@
         </Grid.ColumnDefinitions>
         <Label Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Content="IP地址 :"/>
         <Label Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Content="端口号 :"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,2,3,2"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,2,3,2"/>
-        <Button Grid.Row="4" Grid.Column="1" Margin="40,3,-20,2" Width="75" Content="确认"/>
-        <Button Grid.Row="4" Grid.Column="2" Margin="20,3,2,2" Width="75" Content="取消" IsCancel="True" IsDefault="True"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,2,3,2"
+                 Text="{Binding Path=ServerIP,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+        <xctk:IntegerUpDown  Grid.Column="1" Grid.Row="2" Minimum="1" Maximum="65535"
+                             HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                             Value="{Binding Path=ServerPort,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Grid.Row="4" Grid.Column="1" Margin="40,3,-20,2" Width="75" Content="确认" Click="OK_Button_Click"/>
+        <Button Grid.Row="4" Grid.Column="2" Margin="20,3,2,2" Width="75" Content="取消" IsCancel="True" IsDefault="True" Click="Cancel_Button_Click"/>
     </Grid>
 </Window>
